[package]
name = "rave-bebop-stream-relay"
version = "0.1.0"
edition = "2021"
description = "Internal Bebop Price API stream relay — replicates protobuf pricing from all chains into a single multiplexed internal WebSocket"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = "0.3"
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rust_decimal = { version = "1", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
url = "2"
hex = "0.4"

[build-dependencies]
prost-build = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
